# ComfyUI-GTF-Utilities

./: .flake8  .gitignore  LICENSE  README.md  __init__.py  bbox.py  colorspace.py  convert.py  filter.py  filters.py  gtfu.py  interface.py  nodes_arithmetic.py  nodes_bbox.py  nodes_colorspace.py  nodes_conversion.py  nodes_convert.py  nodes_dimensions.py  nodes_filter.py  nodes_interface.py  nodes_resample.py  nodes_tonemap.py  nodes_transform.py  nodes_utils.py  pyproject.toml  resample.py  special.py  tonemap.py  transform.py  types.py  utils.py  window.py
.github/workflows/: publish_action.yml
docs/: Resampling.md
gtf_impl/: bbox.py  colorspace.py  convert.py  filter.py  filters.py  grading.py  resample.py  special.py  tonemap.py  transform.py  utils.py
gtf_nodes/: __init__.py  bbox.py  colorspace.py  convert.py  dimensions.py  filter.py  filters.py  grading.py  interface.py  logic.py  math.py  primitive.py  resample.py  source.py  special.py  tonemap.py  transform.py  trigonometry.py  window.py
impl/: bbox.py  colorspace.py  filter.py  grading.py  resample.py  tonemap.py  utils.py
nodes/: arithmetic.py  bbox.py  colorspace.py  convert.py  dimensions.py  filter.py  interface.py  resample.py  tonemap.py  transform.py
reference/: derivative_of_gaussian.wl  lanczos.nb  lanczos.wl  mitchell-netravali.nb  mitchell-netravali.wl
scripts/: resampling_plots.py
workflows/: Inpaint.json
