[project]
name = "comfyui-gtf-utilities"
description = "Generalised 'image' processing nodes for images, masks, latents, and combinations thereof."
version = "0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/wmpmiles/ComfyUI-GTF-Utilities.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wmpmiles"
DisplayName = "ComfyUI-GTF-Utilities"
Icon = ""
