[project]
name = "gtfu"
description = "Library for common image processing operations on PyTorch tensor batches."
version = "0.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/wmpmiles/ComfyUI-GTF-Utilities.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wmpmiles"
DisplayName = "GTF Utilities"
Icon = ""
